--- a/odoo_device/views/device.xml
+++ b/odoo_device/views/device.xml
@@ -92,5 +92,16 @@
             <field name="category_id" ref="base.module_category_administration"/>
         </record>
 
+        <!-- Access Control for Devices -->
+        <record id="device_model_access" model="ir.model.access">
+            <field name="name">device access</field>
+            <field name="model_id" ref="model_device"/>
+            <field name="group_id" ref="group_device_manager"/>
+            <field name="perm_read" eval="1"/>
+            <field name="perm_write" eval="1"/>
+            <field name="perm_create" eval="1"/>
+            <field name="perm_unlink" eval="1"/>
+        </record>
+
     </data>
 </odoo>
