--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,51 +1,84 @@
 <odoo>
-    <data>
-        <!-- Action to Display Devices -->
-        <record id="action_devices_list" model="ir.actions.act_window">
-            <field name="name">Devices</field>
-            <field name="res_model">device</field>
-            <field name="view_mode">tree,form</field>
-            <field name="help" type="html">
-                <p class="oe_view_nocontent_create">Create your first device record.</p>
-            </field>
-        </record>
+    <!-- Device Model Views -->
+    <record id="view_device_form" model="ir.ui.view">
+        <field name="name">device.form</field>
+        <field name="model">device</field>
+        <field name="arch" type="xml">
+            <form string="Device">
+                <sheet>
+                    <group>
+                        <field name="name" string="Device Name" />
+                        <field name="status" string="Status" />
+                        <field name="url" string="URL to Fetch JSON From" />
+                        <field name="json_data" string="JSON Data" readonly="1" />
+                    </group>
 
-        <!-- Device Tree View -->
-        <record id="view_device_tree" model="ir.ui.view">
-            <field name="name">device.tree</field>
-            <field name="model">device</field>
-            <field name="arch" type="xml">
-                <tree string="Devices">
-                    <field name="name"/>
-                    <field name="status"/>
-                </tree>
-            </field>
-        </record>
+                    <notebook>
+                        <page string="Parameters">
+                            <field name="device_parameter_ids" context="{'default_device_id': active_id}">
+                                <tree editable="bottom">
+                                    <field name="parameter_name" />
+                                    <field name="parameter_value" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+                <footer>
+                    <button name="action_submit_url" string="Submit URL" type="object" class="btn-primary" />
+                </footer>
+            </form>
+        </field>
+    </record>
 
-        <!-- Device Form View -->
-        <record id="view_device_form" model="ir.ui.view">
-            <field name="name">device.form</field>
-            <field name="model">device</field>
-            <field name="arch" type="xml">
-                <form string="Device Form">
-                    <sheet>
-                        <group>
-                            <field name="name" required="1"/>
-                            <field name="status" readonly="1"/>
-                            <field name="url" required="1"/>
-                            <field name="json_data" widget="text" readonly="1"/>
-                        </group>
-                    </sheet>
-                    <footer>
-                        <button name="action_submit_url" string="Submit" type="object" class="btn btn-primary"/>
-                        <button string="Cancel" class="btn btn-secondary" special="cancel"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
+    <record id="view_device_tree" model="ir.ui.view">
+        <field name="name">device.tree</field>
+        <field name="model">device</field>
+        <field name="arch" type="xml">
+            <tree string="Devices">
+                <field name="name" />
+                <field name="status" />
+            </tree>
+        </field>
+    </record>
 
-        <!-- Menu Items -->
-        <menuitem id="menu_devices_root" name="Devices" sequence="10"/>
-        <menuitem id="menu_devices_list" parent="menu_devices_root" action="action_devices_list" name="Devices" sequence="1"/>
-    </data>
+    <!-- Device Parameter Model Views -->
+    <record id="view_device_parameter_form" model="ir.ui.view">
+        <field name="name">device.parameter.form</field>
+        <field name="model">device.parameter</field>
+        <field name="arch" type="xml">
+            <form string="Device Parameter">
+                <sheet>
+                    <group>
+                        <field name="device_id" invisible="1"/>
+                        <field name="parameter_name" string="Parameter Name" />
+                        <field name="parameter_value" string="Parameter Value" />
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="view_device_parameter_tree" model="ir.ui.view">
+        <field name="name">device.parameter.tree</field>
+        <field name="model">device.parameter</field>
+        <field name="arch" type="xml">
+            <tree string="Device Parameters">
+                <field name="parameter_name" />
+                <field name="parameter_value" />
+            </tree>
+        </field>
+    </record>
+
+    <!-- Action for Devices -->
+    <record id="action_device" model="ir.actions.act_window">
+        <field name="name">Devices</field>
+        <field name="res_model">device</field>
+        <field name="view_mode">tree,form</field>
+        <field name="target">current</field>
+    </record>
+
+    <!-- Menu Items -->
+    <menuitem id="menu_device_management" name="Device Management" />
+    <menuitem id="menu_device" name="Devices" parent="menu_device_management" action="action_device" />
 </odoo>
