--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -38,7 +38,41 @@
         </field>
     </record>
 
-    <!-- Action for Connected Devices -->
+    <!-- Device Model -->
+    <record id="model_device_device" model="ir.model">
+        <field name="name">device.device</field>
+        <field name="model">device.device</field>
+    </record>
+
+    <!-- Form View for Devices -->
+    <record id="view_device_form" model="ir.ui.view">
+        <field name="name">device.device.form</field>
+        <field name="model">device.device</field>
+        <field name="arch" type="xml">
+            <form string="Device">
+                <sheet>
+                    <group>
+                        <field name="name" string="Device Name" required="1"/>
+                        <field name="status" string="Status"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Tree View for Devices -->
+    <record id="view_device_tree" model="ir.ui.view">
+        <field name="name">device.device.tree</field>
+        <field name="model">device.device</field>
+        <field name="arch" type="xml">
+            <tree string="Devices">
+                <field name="name"/>
+                <field name="status"/>
+            </tree>
+        </field>
+    </record>
+
+    <!-- Action for Device Connection -->
     <record id="action_connection_devices" model="ir.actions.act_window">
         <field name="name">Connected Devices</field>
         <field name="res_model">device.connection</field>
@@ -47,9 +81,16 @@
         <field name="target">current</field>
     </record>
 
-    <!-- Menu Items -->
-    <menuitem id="menu_device_management" name="Device Management" />
-    <menuitem id="menu_connection" name="Connection" parent="menu_device_management" action="action_connection_devices" />
-    <menuitem id="menu_device" name="Devices" parent="menu_device_management" action="action_device" />
+    <!-- Action for Devices -->
+    <record id="action_device" model="ir.actions.act_window">
+        <field name="name">Devices</field>
+        <field name="res_model">device.device</field>
+        <field name="view_mode">tree,form</field>
+        <field name="target">current</field>
+    </record>
 
+    <!-- Menu Items -->
+    <menuitem id="menu_device_management" name="Device Management"/>
+    <menuitem id="menu_connection" name="Connections" parent="menu_device_management" action="action_connection_devices"/>
+    <menuitem id="menu_device" name="Devices" parent="menu_device_management" action="action_device"/>
 </odoo>
