--- a/odoo_device/views/access_device.xml
+++ b/odoo_device/views/access_device.xml
@@ -1,19 +1,19 @@
-<record id="access_device_manager" model="ir.model.access">
-    <field name="name">access_device_manager</field>
-    <field name="model_id" ref="model_device"/>
+<record id="access_x_device_manager" model="ir.model.access">
+    <field name="name">access_x_device_manager</field>
+    <field name="model_id" ref="model_x_device"/>
     <field name="group_id" ref="base.group_user"/>
-    <field name="perm_read" eval="1"/>
-    <field name="perm_write" eval="1"/>
-    <field name="perm_create" eval="1"/>
-    <field name="perm_unlink" eval="1"/>
+    <field name="perm_read">1</field>
+    <field name="perm_write">1</field>
+    <field name="perm_create">1</field>
+    <field name="perm_unlink">1</field>
 </record>
 
-<record id="access_device_user" model="ir.model.access">
-    <field name="name">access_device_user</field>
-    <field name="model_id" ref="model_device"/>
+<record id="access_x_device_user" model="ir.model.access">
+    <field name="name">access_x_device_user</field>
+    <field name="model_id" ref="model_x_device"/>
     <field name="group_id" ref="base.group_user"/>
-    <field name="perm_read" eval="1"/>
-    <field name="perm_write" eval="0"/>
-    <field name="perm_create" eval="0"/>
-    <field name="perm_unlink" eval="0"/>
+    <field name="perm_read">1</field>
+    <field name="perm_write">0</field>
+    <field name="perm_create">0</field>
+    <field name="perm_unlink">0</field>
 </record>
