--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,43 +1,4 @@
 <odoo>
-    <!-- Device Connection Model -->
-    <record id="model_x_device_connection" model="ir.model">
-        <field name="name">x.device.connection</field>
-        <field name="model">x.device.connection</field>
-    </record>
-
-    <!-- Device Connection Form View -->
-    <record id="view_x_device_connection_form" model="ir.ui.view">
-        <field name="name">x.device.connection.form</field>
-        <field name="model">x.device.connection</field>
-        <field name="arch" type="xml">
-            <form string="Device Connection">
-                <sheet>
-                    <group>
-                        <field name="device_id" string="Device" required="1"/>
-                        <field name="url" string="URL to Fetch JSON From" required="1"/>
-                    </group>
-                </sheet>
-                <footer>
-                    <button name="action_submit_url" string="Submit" type="object" class="btn-primary"/>
-                    <button string="Cancel" class="btn-secondary" special="cancel"/>
-                </footer>
-            </form>
-        </field>
-    </record>
-
-    <!-- Device Connection Tree View -->
-    <record id="view_x_device_connection_tree" model="ir.ui.view">
-        <field name="name">x.device.connection.tree</field>
-        <field name="model">x.device.connection</field>
-        <field name="arch" type="xml">
-            <tree string="Device Connections">
-                <field name="device_id"/>
-                <field name="url"/>
-                <field name="connection_status"/>
-            </tree>
-        </field>
-    </record>
-
     <!-- Device Model -->
     <record id="model_x_device" model="ir.model">
         <field name="name">x.device</field>
@@ -72,53 +33,12 @@
         </field>
     </record>
 
-    <!-- Menus -->
-    <menuitem id="menu_parent_device" name="Devices" sequence="1"/>
-
-    <!-- Device Connections Menu -->
-    <menuitem id="menu_device_connection" name="Device Connections" parent="menu_parent_device" sequence="1"/>
-
-    <!-- Device Connections Action -->
-    <record id="action_device_connection" model="ir.actions.act_window">
-        <field name="name">Device Connections</field>
-        <field name="res_model">x.device.connection</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-
-    <!-- Correct Parent Menu Item for Device Connections -->
-    <menuitem id="menu_device_connections_action" name="Device Connections" parent="menu_device_connection" action="action_device_connection" sequence="2"/>
-
-    <!-- Devices Menu -->
-    <menuitem id="menu_device" name="Devices" parent="menu_parent_device" sequence="2"/>
-
-    <!-- Devices Action -->
+    <!-- Device Action -->
     <record id="action_device" model="ir.actions.act_window">
         <field name="name">Devices</field>
         <field name="res_model">x.device</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Corrected Parent for Devices -->
-    <menuitem id="menu_device_action" name="Devices" parent="menu_device" action="action_device" sequence="1"/>
-
-    <!-- Access Control for Device and Device Connection -->
-    <record id="access_device_manager" model="ir.model.access">
-        <field name="name">access_device_manager</field>
-        <field name="model_id" ref="model_x_device"/>
-        <field name="group_id" ref="base.group_user"/>
-        <field name="perm_read">1</field>
-        <field name="perm_write">1</field>
-        <field name="perm_create">1</field>
-        <field name="perm_unlink">1</field>
-    </record>
-
-    <record id="access_device_user" model="ir.model.access">
-        <field name="name">access_device_user</field>
-        <field name="model_id" ref="model_x_device"/>
-        <field name="group_id" ref="base.group_user"/>
-        <field name="perm_read">1</field>
-        <field name="perm_write">0</field>
-        <field name="perm_create">0</field>
-        <field name="perm_unlink">0</field>
-    </record>
+    <menuitem id="menu_device" name="Devices" parent="menu_parent_device" action="action_device" sequence="2"/>
 </odoo>
