--- a/odoo_device/views/connection_views.xml
+++ b/odoo_device/views/connection_views.xml
@@ -1,4 +1,12 @@
 <odoo>
+    <!-- Action for Connections -->
+    <record id="action_connection" model="ir.actions.act_window">
+        <field name="name">Connections</field>
+        <field name="res_model">devices.connection</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Tree View for Connections -->
     <record id="view_connection_tree" model="ir.ui.view">
         <field name="name">devices.connection.tree</field>
         <field name="model">devices.connection</field>
@@ -11,6 +19,7 @@
         </field>
     </record>
 
+    <!-- Form View for Connections -->
     <record id="view_connection_form" model="ir.ui.view">
         <field name="name">devices.connection.form</field>
         <field name="model">devices.connection</field>
@@ -31,11 +40,6 @@
         </field>
     </record>
 
+    <!-- Menu Items -->
     <menuitem id="menu_connection" name="Connections" parent="menu_devices_root" action="action_connection"/>
-    
-    <record id="action_connection" model="ir.actions.act_window">
-        <field name="name">Connections</field>
-        <field name="res_model">devices.connection</field>
-        <field name="view_mode">tree,form</field>
-    </record>
 </odoo>
