--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,4 +1,12 @@
 <odoo>
+    <!-- Action for Devices -->
+    <record id="action_device" model="ir.actions.act_window">
+        <field name="name">Devices</field>
+        <field name="res_model">devices.device</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Tree View for Devices -->
     <record id="view_device_tree" model="ir.ui.view">
         <field name="name">devices.device.tree</field>
         <field name="model">devices.device</field>
@@ -10,6 +18,7 @@
         </field>
     </record>
 
+    <!-- Form View for Devices -->
     <record id="view_device_form" model="ir.ui.view">
         <field name="name">devices.device.form</field>
         <field name="model">devices.device</field>
@@ -25,12 +34,7 @@
         </field>
     </record>
 
-    <menuitem id="menu_devices_root" name="Devices" sequence="1" action=""/>
+    <!-- Menu Items -->
+    <menuitem id="menu_devices_root" name="Devices" sequence="1"/>
     <menuitem id="menu_device" name="Devices" parent="menu_devices_root" action="action_device"/>
-    
-    <record id="action_device" model="ir.actions.act_window">
-        <field name="name">Devices</field>
-        <field name="res_model">devices.device</field>
-        <field name="view_mode">tree,form</field>
-    </record>
 </odoo>
